Pick up the unique installations paths used by the Rust image

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,6 +13,9 @@
         "visualstudioexptteam.vscodeintellicode"
       ]
     }
-  }
+  },
+  "postCreateCommand": [
+    "sh", ".devcontainer/update-paths.sh"
+  ]
   // forwardPorts here
 }
