--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,18 +1,18 @@
 version: "3.9"
 
 services:
-  dev:
+  rust:
     build:
       context: .
       dockerfile: Dockerfile
     command: sleep infinity
     volumes:
-      - ..:/workspaces/dev
+      - ..:/workspaces/rust
     # This is where ports would go
     networks:
-      - dev-network
+      - rust-network
   # Additional services here
 # volumes here
 networks:
-  dev-network:
+  rust-network:
     driver: bridge  
