--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,23 +1,24 @@
 {
-  "dockerComposeFile": "docker-compose.yml",
-  "service": "rust",
-  "workspaceFolder": "/workspaces/rust",
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "bungcip.better-toml",
-        "editorconfig.editorconfig",
-        "github.github-vscode-theme",
-        "ms-azuretools.vscode-docker",
-        "redhat.vscode-yaml",
-        "rust-lang.rust-analyzer",
-        "visualstudioexptteam.vscodeintellicode"
-      ]
-    }
-  },
-  "postCreateCommand": [
-    "sh",
-    ".devcontainer/update-paths.sh"
-  ]
-  // forwardPorts here
+    "dockerComposeFile": "docker-compose.yml",
+    "service": "rust",
+    "workspaceFolder": "/workspaces/rust",
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "bungcip.better-toml",
+                "editorconfig.editorconfig",
+                "github.github-vscode-theme",
+                "ms-azuretools.vscode-docker",
+                "ms-vscode.cpptools-extension-pack",
+                "redhat.vscode-yaml",
+                "rust-lang.rust-analyzer",
+                "visualstudioexptteam.vscodeintellicode"
+            ]
+        }
+    },
+    "postCreateCommand": [
+        "sh",
+        ".devcontainer/update-paths.sh"
+    ]
+    // forwardPorts here
 }
