--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,12 +10,15 @@ RUN rustup component add rustfmt; \
     apt-get update; \
     apt-get -y install locales less dialog apt-utils man-db bc zsh fish zip unzip sudo tmux bat vim emacs-nox git iproute2 procps lsb-release libnss3-tools httpie jq sqlite3; \
     apt-get -y install build-essential autoconf automake cmake m4 bison flex gettext; \
+    apt-get -y install clang clang-13 clang-format-13 clang-13-doc libc++1-13 libc++-13-dev libc++abi-13-dev; \
     apt-get -y install libssl-dev libcurl4-openssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev libelf-dev xz-utils tk-dev libffi-dev liblzma-dev python-openssl; \
     apt-get -y install libgmp-dev; \
     apt-get -y dist-upgrade; \
     echo 'en_US.UTF-8 UTF-8' >> /etc/locale.gen; \
     locale-gen; \
     update-locale LANG=en_US.UTF-8; \
+    update-alternatives --set cc /usr/bin/clang; \
+    update-alternatives --set c++ /usr/bin/clang++; \
     groupadd --gid $USER_GID $USERNAME; \
     useradd -s /bin/zsh --uid $USER_UID --gid $USER_GID -m $USERNAME; \
     echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME; \
