Replace deprecated TOML extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,13 +5,13 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "bungcip.better-toml",
                 "editorconfig.editorconfig",
                 "github.github-vscode-theme",
                 "ms-azuretools.vscode-docker",
                 "ms-vscode.cpptools-extension-pack",
                 "redhat.vscode-yaml",
                 "rust-lang.rust-analyzer",
+                "tamasfe.even-better-toml",
                 "visualstudioexptteam.vscodeintellicode"
             ]
         }
